Revert "добавил bold и italic кнопке"

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.044"
-        tools:text="TextView" />
+        app:layout_constraintVertical_bias="0.044" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
@@ -65,7 +64,7 @@
         android:id="@+id/switch1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@android:string/yes"
+        android:text="Switch"
         android:textColor="#F44336"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,8 +82,6 @@
         android:shadowColor="#FF0000"
         android:text="Button"
         android:textColorLink="#ED0000"
-        android:textStyle="bold|italic"
-        app:iconTintMode="screen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
